# oul

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  cpp_modules.cmake  vcpkg.json
lib/helpers/: Helpers.cpp  Helpers.h
msg/: czech.json  english.json
schemata/: oul.component.schema.json  oul.config.schema.json
server/: README.md  index.ts  package-lock.json  package.json  server.ts  tsconfig.json  zip.ts
server/src/: index.ts  server.ts  zip.ts
src/: args.ixx  command.hpp  command.ixx  commnad.cpp  common.ixx  component_manager.cpp  component_manager.hpp  component_manager.ixx  config.cpp  config.hpp  download.cpp  download.hpp  general.cpp  general.hpp  help.cpp  help.hpp  main.cpp  message.ixx  server.cpp  server.hpp  support.cpp  support.hpp  support.ixx  temporary_file.ixx  tmp.cpp  tmp.hpp  tmp.ixx  tools.ixx  usings.ixx  zip.cpp  zip.hpp
src/cmd/: add.ixx  args.cpp  args.hpp  args.ixx  command.cpp  command.ixx  create.ixx  delete.ixx  exclude.ixx  group_add.ixx  group_remove.ixx  help.cpp  help.ixx  init.ixx  install.ixx  list.ixx  remove.ixx  rename.ixx  upload.ixx
src/config/: config.cpp  config.hpp  config.ixx  data_file.cpp  data_file.hpp  data_file.ixx  item.ixx
src/data_file/: data_file.cpp  data_file.hpp
src/server/: file_iterator.ixx  server.ixx  server_base.ixx  server_tools.ixx  zip.ixx  zip_base.ixx  zip_tools.ixx
test/: config_test.cpp  file_iterator_test.cpp  mock_filesystem.ixx
test/config_test/: config_test.cpp
test/file_iterator_test/: file_iterator_test.cpp  mock_filesystem.ixx
test/files/: correct.json  correct.yaml  oul.config.json  oul.config.yaml
